--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: BIM Roadmap
 email: dalbert@onuma.com
 description: > # this means to ignore newlines until "baseurl:"
   BIM Roadmap to be developed as a team through Github
-baseurl: "/BIM/"
+baseurl: "/BIM"
 #baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://thomas-dalbert.github.io"
 #url: "http://localhost:4000" # the base hostname & protocol for your site
