--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: BIMStorm
 email: dalbert@onuma.com
 description: > # this means to ignore newlines until "baseurl:"
   A place where documentation, code, samples, instructions and templates will be collected.
-baseurl: "/BIM"
+baseurl: "/BIMStorm"
 #baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://thomas-dalbert.github.io"
 #url: "http://localhost:4000" # the base hostname & protocol for your site
